Refactor to router-based navigation and add Image Optimizer page
Replaces tab-based navigation with React Router, introducing a new Navigation component and separate pages for Schema Generator, Legal Page Generator, and Image Optimizer. Removes the old ImageOptimizer component and adds a new ImageOptimizerPage with image processing logic. Updates dependencies to include react-router-dom, jszip, and related types. Also updates meta tags and canonical URLs in index.html.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Private Practice Web Tools - Schema Generator, Legal Pages & More" />
     <meta property="og:description" content="Free web tools for private practice professionals. Generate schema markup, create legal pages, and optimize images for your website." />
-    <meta property="og:url" content="https://laserwolve.github.io/PrivatePracticeWebTools/" />
+    <meta property="og:url" content="https://privatepracticewebtools.netlify.app/" />
     <meta property="og:image" content="/images/logo.webp" />
     
     <!-- Twitter -->
@@ -24,7 +24,7 @@
     <meta name="twitter:image" content="/images/logo.webp" />
     
     <link rel="icon" type="image/webp" href="/images/favicon.webp" />
-    <link rel="canonical" href="https://laserwolve.github.io/PrivatePracticeWebTools/" />
+    <link rel="canonical" href="https://privatepracticewebtools.netlify.app/" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -37,7 +37,7 @@
       "@type": "SoftwareApplication",
       "name": "Private Practice Web Tools",
       "description": "Free web tools for private practice professionals including schema generator, legal page generator, and image optimizer.",
-      "url": "https://laserwolve.github.io/PrivatePracticeWebTools/",
+      "url": "https://privatepracticewebtools.netlify.app/",
       "applicationCategory": "WebApplication",
         "aggregateRating": {
         "@type": "AggregateRating",
