Enhance LocalBusiness schema and update UI labels
Refactored the LocalBusiness schema generation to use an @graph structure with Organization and LocalBusiness entities, added new fields (email, founder, priceRange) for LocalBusiness, and improved handling of specialties and areaServed. Updated navigation and UI labels for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Private Practice Web Tools - Schema Generator, Legal Pages & More</title>
+    <title>Private Practice Web Tools</title>
     <meta name="description" content="Free web tools for private practice professionals. Generate schema markup, create legal pages, and optimize images for your website. Built specifically for counselors, therapists, and healthcare providers." />
     <meta name="keywords" content="private practice, schema generator, legal pages, privacy policy, terms of service, image optimizer, web tools, counseling, therapy, healthcare" />
     <meta name="author" content="CounselingWise" />
