Rename LegalPageGenerator to LegalTextGenerator and add scroll/UX improvements
Renames all references and routes from 'Legal Page Generator' to 'Legal Text Generator' across the app, including file names, navigation, and documentation. Adds ScrollFadeIn and ScrollToTop components for improved UX and smooth transitions. Enhances the Image Optimizer and Legal Text Generator pages with selectable labels, Screaming Frog data parsing, and improved clipboard copy logic. Updates schema generation for specialty pages to use @graph structure and improves address/social link handling.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       "@context": "https://schema.org",
       "@type": "SoftwareApplication",
       "name": "Private Practice Web Tools",
-      "description": "Free web tools for private practice professionals including schema generator, legal page generator, and image optimizer.",
+      "description": "Free web tools for private practice professionals including schema generator, legal text generator, and image optimizer.",
       "url": "https://privatepracticewebtools.netlify.app/",
       "applicationCategory": "WebApplication",
         "aggregateRating": {
@@ -58,7 +58,7 @@
       },
       "featureList": [
         "Schema Markup Generator",
-        "Legal Page Generator", 
+        "Legal Text Generator", 
         "Privacy Policy Generator",
         "Terms of Service Generator",
         "Image Optimizer"
